--- a/style/utilities.css
+++ b/style/utilities.css
@@ -15,3 +15,25 @@
   --line-height: 1.7rem;
   --transition: 0.3s;
 }
+
+.burger-menu {
+    color: var(--primary-color);
+    font-size: 2rem;
+    border: 0;
+    background-color: transparent;
+    cursor: pointer;
+    display: none;
+  }
+
+.icon {
+    width: 8rem;
+    height: 8rem;
+}
+
+.icon-card {
+    background-color: #fff;
+    border-radius: 11px;
+    box-shadow: 0 3px 10px var(--secondary-shadow);
+    padding: 20px;
+    margin: 10px;
+  }
