--- a/style/index.css
+++ b/style/index.css
@@ -23,7 +23,7 @@ a:hover {
 
 body {
   font-family: var(--font-family);
-  font-size: 62.5%;
+  /* font-size: 62.5%; */
 }
 nav {
   position: sticky;
