--- a/style/index.css
+++ b/style/index.css
@@ -116,3 +116,26 @@ nav ul li {
   .skills-box img {
     padding: 1.25rem;
   }
+  .projects {
+    background-color: var(--bg-color);
+    padding: 32px 0;
+    margin-top: 2rem;
+  }
+  
+  .projects-pic {
+    width: 65%;
+    height: 60%;
+  }
+  
+  .projects-box {
+    display: flex;
+    align-items:center;
+    /* justify-content: space-between; */
+    text-align: center;
+    width: 100%;
+    padding: 1rem;
+  }
+  .projects-title {
+    text-align: center;
+    margin-bottom: 1rem;
+  }
