--- a/style/utilities.css
+++ b/style/utilities.css
@@ -5,7 +5,7 @@
   --normal-font: 400;
   --bold-font: 700;
   --bolder-font: 900;
-  --bg-color: #fcfcfc;
+  --bg-color: #E8EEED;
   --primary-color: #a2798f;
   --secondary-color: #8caba8;
   --primary-shadow: #d6d3d3;
