--- a/style/index.css
+++ b/style/index.css
@@ -130,7 +130,7 @@ nav ul li {
   .projects-box {
     display: flex;
     align-items:center;
-    /* justify-content: space-between; */
+    justify-content: space-between;
     text-align: center;
     width: 100%;
     padding: 1rem;
@@ -138,4 +138,61 @@ nav ul li {
   .projects-title {
     text-align: center;
     margin-bottom: 1rem;
+  }
+  .contact {
+    margin-top: 2rem;
+  }
+  
+  .contact h2 {
+    text-align: center;
+    margin-bottom: var(--bottom-margin-2);
+  }
+  
+  .contact-box {
+    max-width: 40.75rem;
+    margin: 0 auto;
+    padding: 0.938rem;
+    border-radius: 5px;
+    box-shadow: 0 3px 10px var(--secondary-shadow);
+  }
+  .contact-box label {
+    line-height: 2.7em;
+    font-weight: var(--bold-font);
+    color: var(--primary-color);
+  }
+  
+  .contact-box textarea {
+    min-height: 6.25rem;
+    font-size: 14px;
+  }
+  
+  .contact-box .input-field {
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 5px;
+    /* border: none; */
+    border: 2px solid var(--primary-color);
+    font-size: 0.875rem;
+    outline: none;
+  }
+  .input-field::placeholder {
+    padding: 0.5rem;
+    color: var(--secondary-color);
+  }
+  .submit-btn {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    background-color: #fff;
+    border: 2px solid var(--primary-color);
+    border-radius: 5px;
+    font-size: 1rem;
+    font-weight: var(--bold-font);
+    transition: var(--transition);
+  }
+  .submit-btn:hover {
+    background-color: var(--primary-color);
+    border: 2px solid var(--primary-color);
+    cursor: pointer;
   }
