--- a/style/index.css
+++ b/style/index.css
@@ -23,7 +23,6 @@ a:hover {
 
 body {
   font-family: var(--font-family);
-  /* font-size: 62.5%; */
 }
 nav {
   position: sticky;
@@ -33,10 +32,9 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0.5rem 3rem;
+  padding: 1rem 3rem;
   background-color: var(--bg-color);
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
-  /* height: 6rem; */
 }
 nav h1 {
   color: var(--primary-color);
@@ -137,7 +135,7 @@ nav ul li {
   }
   .projects-title {
     text-align: center;
-    margin-bottom: 1rem;
+    margin: 1rem 0;
   }
   .contact {
     margin-top: 2rem;
@@ -150,7 +148,7 @@ nav ul li {
   
   .contact-box {
     max-width: 40.75rem;
-    margin: 0 auto;
+    margin: 0 auto 3rem auto;
     padding: 0.938rem;
     border-radius: 5px;
     box-shadow: 0 3px 10px var(--secondary-shadow);
@@ -190,9 +188,32 @@ nav ul li {
     font-size: 1rem;
     font-weight: var(--bold-font);
     transition: var(--transition);
+    color: #5b5a5a;
   }
   .submit-btn:hover {
     background-color: var(--primary-color);
     border: 2px solid var(--primary-color);
     cursor: pointer;
   }
+  .socials {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    left: 1%;
+    bottom: 50%;
+  }
+  
+  .socicon {
+    width: 2rem;
+    height: 2rem;
+  }
+  .arrow-up {
+    position: fixed;
+    right: 0.5%;
+    bottom: 3%;
+    cursor: pointer;
+    width: 2rem;
+    height: 2rem;
+    animation: growing 0.5s infinite alternate-reverse;
+  }
+
