--- a/style/utilities.css
+++ b/style/utilities.css
@@ -14,6 +14,7 @@
   --bottom-margin-2: 1rem;
   --line-height: 1.7rem;
   --transition: 0.3s;
+  color:#5b5a5a 
 }
 
 .burger-menu {
@@ -62,3 +63,12 @@
   padding: 20px;
   margin: 10px;
 }
+
+    /* animations */
+
+    @keyframes growing {
+      to {
+        width: 2.3rem;
+        height: 2.3rem;
+      }
+    }
