--- a/style/utilities.css
+++ b/style/utilities.css
@@ -5,16 +5,17 @@
   --normal-font: 400;
   --bold-font: 700;
   --bolder-font: 900;
-  --bg-color: #E8EEED;
+  --bg-color: #e8eeed;
   --primary-color: #a2798f;
   --secondary-color: #8caba8;
   --primary-shadow: #d6d3d3;
-  --secondary-shadow:#b3b3b3;
+  --secondary-shadow: #b3b3b3;
   --bottom-margin: 0.5rem;
   --bottom-margin-2: 1rem;
   --line-height: 1.7rem;
   --transition: 0.3s;
-  color:#5b5a5a 
+  --color: #5b5a5a;
+  color: var(--color);
 }
 
 .burger-menu {
@@ -64,11 +65,52 @@
   margin: 10px;
 }
 
-    /* animations */
+/* animations */
 
-    @keyframes growing {
-      to {
-        width: 2.3rem;
-        height: 2.3rem;
-      }
-    }
+@keyframes growing {
+  to {
+    width: 2.3rem;
+    height: 2.3rem;
+  }
+}
+
+/* skills tooltips  */
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 4rem;
+  font-size: 10px;
+  background-color: var(--color);
+  color: var(--bg-color);
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -60px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
