--- a/style/index.css
+++ b/style/index.css
@@ -5,7 +5,8 @@
 }
 
 html {
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
+  color: var(--color);
 }
 
 ul {
@@ -23,6 +24,7 @@ a:hover {
 
 body {
   font-family: var(--font-family);
+  
 }
 nav {
   position: sticky;
@@ -35,6 +37,7 @@ nav {
   padding: 1rem 3rem;
   background-color: var(--bg-color);
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+  height: 13vh;
 }
 nav h1 {
   color: var(--primary-color);
@@ -65,17 +68,21 @@ nav ul li {
     max-width: 68.75rem;
     margin: auto;
     padding: 2rem 2rem;
+    height: 90vh;
 }
 .hero img {
-    height: 20rem;
-    width: 20rem;
+    height: 12.5rem;
+    width: 15rem;
+    box-shadow: 0px 2px 15px 2px var(--primary-shadow);
+    border-radius: 4px;
+    /* transform: translateX(); */
   }
   
   .bio {
     width: 25rem;
     padding: 0.625rem;
     border-radius: 6px;
-    box-shadow: 0px 2px 15px 2px var(--primary-shadow);
+    box-shadow: 0px 2px 10px 2px var(--primary-shadow);
   }
   
   .bio h2 {
