--- a/style/utilities.css
+++ b/style/utilities.css
@@ -15,7 +15,7 @@
   --line-height: 1.7rem;
   --transition: 0.3s;
   --color: #5b5a5a;
-  color: var(--color);
+  /* color: var(--color); */
 }
 
 .burger-menu {
@@ -65,7 +65,7 @@
   margin: 10px;
 }
 
-/* animations */
+/* arrow-up-animations */
 
 @keyframes growing {
   to {
@@ -73,6 +73,10 @@
     height: 2.3rem;
   }
 }
+
+   /* hero section animation */
+
+
 
 /* skills tooltips  */
 
