--- a/style/index.css
+++ b/style/index.css
@@ -71,11 +71,11 @@ nav ul li {
     height: 90vh;
 }
 .hero img {
-    height: 12.5rem;
-    width: 15rem;
+    height: 17rem;
+    width: 22rem;
     box-shadow: 0px 2px 15px 2px var(--primary-shadow);
     border-radius: 4px;
-    transform: translateX(-150%);
+    transform: translateX(-200%);
     animation: entrence 0.5s ease-in 0.1s 1 forwards;
   }
   
@@ -84,7 +84,7 @@ nav ul li {
     padding: 0.625rem;
     border-radius: 6px;
     box-shadow: 0px 2px 10px 2px var(--primary-shadow);
-    transform: translateX(150%);
+    transform: translateX(200%);
     animation: entrence 0.5s ease-in 0.5s 1 forwards;
 
   }
@@ -100,6 +100,10 @@ nav ul li {
   .more-about {
     background-color: var(--bg-color);
     padding: 1rem 6rem;
+    height: 90vh;
+  }
+  .more-about-box{
+    height: 100%;
   }
   
   .more-about h2 {
