--- a/style/index.css
+++ b/style/index.css
@@ -104,6 +104,7 @@ nav ul li {
   }
   .more-about-box{
     height: 100%;
+    padding: 1.5rem 1.5rem;
   }
   
   .more-about h2 {
@@ -120,7 +121,7 @@ nav ul li {
     border-radius: 5px;
     text-align: center;
     width: 30%;
-    margin: auto;
+    margin: 1rem auto;
     /* height: 2rem; */
     padding: 0.5rem 0;
   }
