--- a/style/index.css
+++ b/style/index.css
@@ -5,7 +5,6 @@
 }
 
 html {
-  /* scroll-behavior: smooth; */
   color: var(--color);
 }
 
@@ -37,9 +36,10 @@ nav {
   padding: 1rem 3rem;
   background-color: var(--bg-color);
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
-  height: 13vh;
+  height: 12vh;
 }
-nav h1 {
+
+nav h2 {
   color: var(--primary-color);
 }
 
@@ -59,7 +59,9 @@ nav ul {
 
 nav ul li {
   font-weight: var(--bold-font);
-}
+} 
+
+
 .hero {
     display: flex;
     align-items: center;
@@ -187,6 +189,7 @@ nav ul li {
   .contact-box textarea {
     min-height: 6.25rem;
     font-size: 14px;
+    margin-top: 0.5rem;
   }
   
   .contact-box .input-field {
