--- a/style/index.css
+++ b/style/index.css
@@ -36,7 +36,8 @@ nav {
   padding: 1rem 3rem;
   background-color: var(--bg-color);
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
-  height: 12vh;
+  height: 60px;
+  overflow: hidden;
 }
 
 nav h2 {
@@ -107,6 +108,8 @@ nav ul li {
   .more-about-box{
     height: 100%;
     padding: 1.5rem 1.5rem;
+    display: flex;
+    flex-direction: column;
   }
   
   .more-about h2 {
@@ -122,7 +125,7 @@ nav ul li {
     border: var(--secondary-color) solid 2px;
     border-radius: 5px;
     text-align: center;
-    width: 30%;
+    width: 40%;
     margin: 1rem auto;
     /* height: 2rem; */
     padding: 0.5rem 0;
@@ -189,7 +192,6 @@ nav ul li {
   .contact-box textarea {
     min-height: 6.25rem;
     font-size: 14px;
-    margin-top: 0.5rem;
   }
   
   .contact-box .input-field {
@@ -197,10 +199,10 @@ nav ul li {
     padding-top: 10px;
     padding-bottom: 10px;
     border-radius: 5px;
-    /* border: none; */
     border: 2px solid var(--primary-color);
     font-size: 0.875rem;
     outline: none;
+    margin-bottom: 0.5rem;
   }
   .input-field::placeholder {
     padding: 0.5rem;
@@ -209,7 +211,6 @@ nav ul li {
   .submit-btn {
     width: 100%;
     padding: 10px;
-    margin: 10px 0;
     background-color: #fff;
     border: 2px solid var(--primary-color);
     border-radius: 5px;
@@ -230,7 +231,6 @@ nav ul li {
     left: 1%;
     bottom: 50%;
   }
-  
   .socicon {
     width: 2rem;
     height: 2rem;
