--- a/style/mobile.css
+++ b/style/mobile.css
@@ -24,6 +24,8 @@
   }
   .hero {
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     gap: 1rem;
   } 
   .hero img {
@@ -34,8 +36,9 @@
     width: 85%;
   }
   .more-about {
-    padding: 1rem 2rem;
+    padding: 0.5rem 2rem;
     text-align: center;
+    
   }
   .more-about p{
     font-size:smaller;
