--- a/style/index.css
+++ b/style/index.css
@@ -71,13 +71,13 @@ nav ul li {
     max-width: 68.75rem;
     margin: auto;
     padding: 2rem 2rem;
+    /* padding-left: 0; */
+    /* margin-right: 4rem; */
     height: 90vh;
 }
 .hero img {
-    height: 17rem;
-    width: 22rem;
-    box-shadow: 0px 2px 15px 2px var(--primary-shadow);
-    border-radius: 4px;
+    height: 25rem;
+    width: 25rem;
     transform: translateX(-200%);
     animation: entrence 0.5s ease-in 0.1s 1 forwards;
   }
@@ -94,16 +94,18 @@ nav ul li {
   
   .bio h2 {
     margin-bottom: var(--bottom-margin);
+    font-size: 3rem;
   }
   
   .bio p {
     line-height: var(--line-height);
     padding: 0.3rem 0;
   }
+
   .more-about {
     background-color: var(--bg-color);
     padding: 1rem 6rem;
-    height: 70vh;
+    height: 75vh;
   }
   .more-about-box{
     height: 100%;
