--- a/style/utilities.css
+++ b/style/utilities.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,700&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap");
 :root {
   --font-family: "Roboto", sans-serf;
   --normal-font: 400;
@@ -10,22 +10,17 @@
   --secondary-color: #8caba8;
   --primary-shadow: #d6d3d3;
   --secondary-shadow: #b3b3b3;
-  --bottom-margin: 0.5rem;
+  --bottom-margin: 1rem;
   --bottom-margin-2: 1rem;
-  --line-height: 1.7rem;
+  --line-height: 3rem;
   --transition: 0.3s;
   --color: #5b5a5a;
-  --hamburger-bg: rgba(214,211,211,0.85)
+  --hamburger-bg: rgba(214, 211, 211, 0.85);
 }
-
-/* .burger-menu {
-  color: var(--primary-color);
+.bold {
+  font-family: "Rubik Dirt", cursive;
   font-size: 2rem;
-  border: 0;
-  background-color: transparent;
-  cursor: pointer;
-  display: none;
-} */
+}
 
 .icon {
   width: 8rem;
@@ -74,10 +69,10 @@
   }
 }
 
-   /* hero section animation */
+/* hero section animation */
 
 @keyframes entrence {
-  to{
+  to {
     transform: translateX(0);
   }
 }
